adding fizzbuzz sample from rb-fizzbuzz.ipynb

--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ Roger B. Andel
 
 <script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
 
+<a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
