--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<div>
 <pre>
 Roger B. Andel
 </pre>
-
-<script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
+</div>
+<div>
 
 <a href='angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
+</div>
+<hr />
+<div>
+<script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
+</div>
