--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Roger B. Andel
 </div>
 <div>
 
-<a href='angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
+<a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
 </div>
 <hr />
 <div>
