ase-desk-py.win.d contribution
Signed-off-by: rogera <wolfgang.schuessel@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 Roger B. Andel
 </pre>
 </div>
+<hr/>
 <div>
-
-<a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
+    <p>contrib-wh.d</p>
+    <ol>
+        <li>
+            <a href="contrib-wh.d/profile-wh.md">profile-wh.md</a>: genned, data processing w/ ase-desk-py #storm
+        </li>
+    </ol>
 </div>
-<hr />
+<hr/>
 <div>
-<script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
+    <a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
+</div>
+
+<hr/>
+<div>
+    <script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
 </div>
