module settings adapted

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Roger B. Andel
 </div>
 <hr/>
 <div>
-    <a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
+    <a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='lang.ruby.d/fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
 </div>
 
 <hr/>
