--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<div>
-<pre>
-Roger B. Andel
-</pre>
-</div>
-<hr/>
-<div>
-    <p>contrib-wh.d</p>
-    <ol>
-        <li>
-            <a href="contrib-wh.d/profile-wh.md">profile-wh.md</a>: genned, data processing w/ ase-desk-py #storm
-        </li>
-    </ol>
-</div>
-<hr/>
-<div>
-    <a href='http://angel.co/rogeraaut'>angel.co profile</a> | <a href='lang.ruby.d/fizzbuzz.d/rb-fizzbuzz.html'>fizzbuzz</a>
-</div>
-
-<hr/>
-<div>
-    <script src="https://gist.github.com/wolfhesse/e5d128ddd82d5e02ec424d33a9c2aa94.js"></script>
-</div>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><title>front</title><link rel=stylesheet type=text/css href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css><link href=/static/css/app.8c0e463f551647fa58261fbb9128a98a.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.8cac8bd1c800a35dc52e.js></script><script type=text/javascript src=/static/js/vendor.01e26c1a46332306d529.js></script><script type=text/javascript src=/static/js/app.5656a4cd5150452643c5.js></script></body></html>
